Fix Binding error
Outputed errors :
System.Windows.Data Error: 2 : Cannot find governing FrameworkElement or
FrameworkContentElement for target element.
BindingExpression:Path=CenterX; DataItem=null; target element is
'RotateTransform'; target property is 'CenterX' (type 'Double')
System.Windows.Data Error: 2 : Cannot find governing FrameworkElement or
FrameworkContentElement for target element.
BindingExpression:Path=CenterY; DataItem=null; target element is
'RotateTransform'; target property is 'CenterY' (type 'Double')

Curently fixed by moving CenterX/CenterY data binding after Angle data
binding (probably due to a .NET issue)

--- a/RadialMenu/Themes/RadialMenuItem.xaml
+++ b/RadialMenu/Themes/RadialMenuItem.xaml
@@ -129,16 +129,22 @@
                         <Canvas>
                             
                             <Canvas.RenderTransform>
-                                <RotateTransform
-                                    CenterX="{Binding CenterX, RelativeSource={RelativeSource TemplatedParent}}"
-                                    CenterY="{Binding CenterY, RelativeSource={RelativeSource TemplatedParent}}">
-                                    
+                                <RotateTransform>
+
                                     <RotateTransform.Angle>
                                         <MultiBinding Converter="{StaticResource RadialMenuItemToRotation}">
                                             <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                             <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
                                         </MultiBinding>
                                     </RotateTransform.Angle>
+
+                                    <RotateTransform.CenterX>
+                                        <Binding Path="CenterX" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                    </RotateTransform.CenterX>
+
+                                    <RotateTransform.CenterY>
+                                        <Binding Path="CenterY" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                    </RotateTransform.CenterY>
                                     
                                 </RotateTransform>
                             </Canvas.RenderTransform>
