--- a/RadialMenuDemo/MainWindow.xaml
+++ b/RadialMenuDemo/MainWindow.xaml
@@ -102,6 +102,7 @@
             </RadialMenu:RadialMenuItem>
 
         </RadialMenu:RadialMenu>
+		<Button Content="Open Menu" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="10" Command="{Binding OpenRadialMenu}" />
     </Grid>
 
 </Window>
