Set visibility to collapsed when not open so items behind it in the menu are actionable and also prevent the non-showing buttons of the radial dial from stealing keyobard focus

--- a/RadialMenu/Themes/RadialMenu.xaml
+++ b/RadialMenu/Themes/RadialMenu.xaml
@@ -6,8 +6,11 @@
     <Style TargetType="{x:Type Controls:RadialMenu}">
 
         <Style.Triggers>
+			<Trigger Property="IsOpen" Value="False">
+				<Setter Property="Visibility" Value="Collapsed" />
+			</Trigger>
             <Trigger Property="IsOpen" Value="True">
-
+				<Setter Property="Visibility" Value="Visible" />
                 <!-- RadialMenu openning animation -->
                 <Trigger.EnterActions>
                     <BeginStoryboard>
