--- a/RadialMenuDemo/MainWindow.xaml
+++ b/RadialMenuDemo/MainWindow.xaml
@@ -11,6 +11,7 @@
     </Window.Resources>
 
     <Grid>
+		<Button Content="Open Menu" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Command="{Binding OpenRadialMenu}" />		
         <RadialMenu:RadialMenu IsOpen="{Binding IsOpen}">
 
             <RadialMenu:RadialMenu.CentralItem>
@@ -102,7 +103,6 @@
             </RadialMenu:RadialMenuItem>
 
         </RadialMenu:RadialMenu>
-		<Button Content="Open Menu" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="10" Command="{Binding OpenRadialMenu}" />
     </Grid>
 
 </Window>
