--- a/RadialMenuDemo/MainWindow.xaml
+++ b/RadialMenuDemo/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:RadialMenu="clr-namespace:RadialMenu.Controls;assembly=RadialMenu" 
         xmlns:Converters="clr-namespace:RadialMenuDemo.Utils"
-        Title="RadialMenu Demo" Height="400" Width="600"
+        Title="RadialMenu Demo" Height="430" Width="650"
         MouseRightButtonDown="Window_MouseRightButtonDown">
 
     <Window.Resources>
@@ -11,98 +11,108 @@
     </Window.Resources>
 
     <Grid>
-		<Button Content="Open Menu" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Command="{Binding OpenRadialMenu}" />		
-        <RadialMenu:RadialMenu IsOpen="{Binding IsOpen}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-            <RadialMenu:RadialMenu.CentralItem>
-                <RadialMenu:RadialMenuCentralItem Command="{Binding CloseRadialMenu}">
-                    <Rectangle Width="25" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_close}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                </RadialMenu:RadialMenuCentralItem>
-            </RadialMenu:RadialMenu.CentralItem>
+        <Grid Grid.Row="0">
+            <Button Content="Open Menu" Command="{Binding OpenRadialMenu}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="40 10" Margin="10"/>
+        </Grid>
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test1}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="25" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_add}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Ajouter
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+        <Grid Grid.Row="1">
+            <RadialMenu:RadialMenu IsOpen="{Binding IsOpen}">
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test2}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="25" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_edit}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Edition
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+                <RadialMenu:RadialMenu.CentralItem>
+                    <RadialMenu:RadialMenuCentralItem Command="{Binding CloseRadialMenu}">
+                        <Rectangle Width="25" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_close}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    </RadialMenu:RadialMenuCentralItem>
+                </RadialMenu:RadialMenu.CentralItem>
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test3}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="23" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_save}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Sauvegarder
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+                <RadialMenu:RadialMenuItem Command="{Binding Test1}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="25" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_add}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Ajouter
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test4}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="20" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_delete}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Supprimer
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+                <RadialMenu:RadialMenuItem Command="{Binding Test2}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="25" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_edit}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Édition
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test5}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="20" Height="25">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_page}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Nouvelle page
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+                <RadialMenu:RadialMenuItem Command="{Binding Test3}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="23" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_save}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Sauvegarder
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
 
-            <RadialMenu:RadialMenuItem Command="{Binding Test6}">
-                <WrapPanel Orientation="Vertical">
-                    <Rectangle Width="19" Height="26">
-                        <Rectangle.Fill>
-                            <VisualBrush Visual="{StaticResource appbar_upload}"/>
-                        </Rectangle.Fill>
-                    </Rectangle>
-                    <TextBlock FontSize="14" TextAlignment="Center">
-                        Partager
-                    </TextBlock>
-                </WrapPanel>
-            </RadialMenu:RadialMenuItem>
+                <RadialMenu:RadialMenuItem Command="{Binding Test4}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="20" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_delete}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Supprimer
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
 
-        </RadialMenu:RadialMenu>
+                <RadialMenu:RadialMenuItem Command="{Binding Test5}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="20" Height="25">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_page}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Nouvelle page
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
+
+                <RadialMenu:RadialMenuItem Command="{Binding Test6}">
+                    <WrapPanel Orientation="Vertical">
+                        <Rectangle Width="19" Height="26">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_upload}"/>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <TextBlock FontSize="14" TextAlignment="Center">
+                            Partager
+                        </TextBlock>
+                    </WrapPanel>
+                </RadialMenu:RadialMenuItem>
+
+            </RadialMenu:RadialMenu>
+        </Grid>
     </Grid>
 
 </Window>
