New opening animation + Cleanup

--- a/RadialMenu/Themes/RadialMenuItem.xaml
+++ b/RadialMenu/Themes/RadialMenuItem.xaml
@@ -11,7 +11,7 @@
     <Converters:RadialMenuItemToContentPosition x:Key="RadialMenuItemToContentPosition"/>
     <Converters:RadialMenuItemToArrowPosition x:Key="RadialMenuItemToArrowPosition"/>
 
-    <Style x:Key="RoundedArrowPath" TargetType="{x:Type Path}">
+    <Style x:Key="RoundedArrowPath" TargetType="Path">
         <Setter Property="Data" Value="m 5.427 222.9380 c 3.614 3.617 7.898 5.424 12.848 5.424 l 255.813 0 c 4.952 0 9.233 -1.807 12.85 -5.424 3.617 -3.621 5.424 -7.902 5.424 -12.851 0 -4.948 -1.807 -9.229 -5.424 -12.847 L 159.031 69.3330 c -3.621 -3.617 -7.902 -5.428 -12.85 -5.428 -4.948 0 -9.233 1.811 -12.847 5.428 L 5.427 197.2410 C 1.814 200.8580 0 205.1390 0 210.0880 c 0 4.948 1.814 9.229 5.427 12.85 z"/>
         <Setter Property="Width" Value="76"/>
         <Setter Property="Height" Value="42.75"/>
@@ -20,7 +20,7 @@
         <Setter Property="Canvas.Top" Value="16.125"/>
     </Style>
 
-    <Style TargetType="{x:Type Controls:RadialMenuItem}">
+    <Style TargetType="Controls:RadialMenuItem">
 
         <Style.Triggers>
 
@@ -33,7 +33,7 @@
             <!-- RadialMenuItem style when pressed -->
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="EdgeBackground" Value="#666"/>
-                <Setter Property="Panel.ZIndex" Value="10" />
+                <Setter Property="Panel.ZIndex" Value="10"/>
             </Trigger>
 
             <!-- RadialMenuItem style when disabled -->
@@ -41,7 +41,7 @@
                 <Setter Property="EdgeBackground" Value="#F3F3F3"/>
                 <Setter Property="Foreground" Value="#AFAFAF"/>
             </Trigger>
-            
+
         </Style.Triggers>
 
         <!-- Default RadialMenuItem style -->
@@ -67,8 +67,8 @@
         <!-- RadialMenuItem template -->
         <Setter Property="Template">
             <Setter.Value>
-                
-                <ControlTemplate TargetType="{x:Type Controls:RadialMenuItem}">
+
+                <ControlTemplate TargetType="Controls:RadialMenuItem">
                     <Canvas Panel.ZIndex="{TemplateBinding Panel.ZIndex}" Width="{TemplateBinding Width}" Height="{TemplateBinding Height}">
 
                         <!-- Main pie piece -->
@@ -81,21 +81,21 @@
                             Fill="{TemplateBinding Background}"
                             StrokeThickness="{Binding BorderThickness.Top, RelativeSource={RelativeSource AncestorType=Controls:RadialMenuItem}}"
                             Stroke="{TemplateBinding BorderBrush}">
-                            
+
                             <Controls:PieShape.StartAngle>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToStartAngle}">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Controls:PieShape.StartAngle>
-                            
+
                             <Controls:PieShape.AngleDelta>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToAngleDelta}">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Controls:PieShape.AngleDelta>
-                            
+
                         </Controls:PieShape>
 
                         <!-- Edge pie piece -->
@@ -108,26 +108,26 @@
                             Fill="{TemplateBinding EdgeBackground}"
                             StrokeThickness="{TemplateBinding EdgeBorderThickness}"
                             Stroke="{TemplateBinding EdgeBorderBrush}">
-                            
+
                             <Controls:PieShape.StartAngle>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToStartAngle}">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Controls:PieShape.StartAngle>
-                            
+
                             <Controls:PieShape.AngleDelta>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToAngleDelta}">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Controls:PieShape.AngleDelta>
-                            
+
                         </Controls:PieShape>
 
                         <!-- Edge content (arrow) -->
                         <Canvas>
-                            
+
                             <Canvas.RenderTransform>
                                 <RotateTransform>
 
@@ -145,10 +145,10 @@
                                     <RotateTransform.CenterY>
                                         <Binding Path="CenterY" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     </RotateTransform.CenterY>
-                                    
+
                                 </RotateTransform>
                             </Canvas.RenderTransform>
-                            
+
                             <Rectangle Width="{TemplateBinding ArrowWidth}" Height="{TemplateBinding ArrowHeight}">
 
                                 <Canvas.Left>
@@ -184,13 +184,13 @@
                                         </VisualBrush.Visual>
                                     </VisualBrush>
                                 </Rectangle.Fill>
-                                
+
                             </Rectangle>
                         </Canvas>
 
                         <!-- Main content -->
                         <ContentControl Content="{TemplateBinding Content}">
-                            
+
                             <Canvas.Left>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToContentPosition}" ConverterParameter="X">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -202,7 +202,7 @@
                                     <Binding Path="ContentRadius" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Canvas.Left>
-                            
+
                             <Canvas.Top>
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToContentPosition}" ConverterParameter="Y">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -214,15 +214,15 @@
                                     <Binding Path="ContentRadius" RelativeSource="{RelativeSource TemplatedParent}"/>
                                 </MultiBinding>
                             </Canvas.Top>
-                            
+
                         </ContentControl>
 
                     </Canvas>
                 </ControlTemplate>
-                
+
             </Setter.Value>
         </Setter>
-        
+
     </Style>
-    
+
 </ResourceDictionary>
