--- a/RadialMenu/Themes/PieShape.xaml
+++ b/RadialMenu/Themes/PieShape.xaml
@@ -3,8 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:RadialMenu.Controls">
 
-    <Style TargetType="{x:Type Controls:PieShape}">
-        
+    <Style TargetType="Controls:PieShape">
+
     </Style>
-    
+
 </ResourceDictionary>
