--- a/RadialMenu/Themes/RadialMenu.xaml
+++ b/RadialMenu/Themes/RadialMenu.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:RadialMenu.Controls">
 
-    <Style TargetType="{x:Type Controls:RadialMenu}">
+    <Style TargetType="Controls:RadialMenu">
 
         <Style.Triggers>
             <Trigger Property="IsOpen" Value="True">
@@ -13,16 +13,19 @@
                     <BeginStoryboard>
                         <Storyboard>
                             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
-                                <EasingDoubleKeyFrame Value="1" KeyTime="0:0:0.4"/>
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="1"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX">
-                                <EasingDoubleKeyFrame Value="1" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="1"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY">
-                                <EasingDoubleKeyFrame Value="1" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="1"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[1].Angle">
-                                <EasingDoubleKeyFrame Value="0" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[1].Angle">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="0"/>
                             </DoubleAnimationUsingKeyFrames>
                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
                                 <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static Visibility.Visible}"/>
@@ -36,16 +39,19 @@
                     <BeginStoryboard>
                         <Storyboard>
                             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
-                                <EasingDoubleKeyFrame Value="0" KeyTime="0:0:0.4"/>
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="0"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX">
-                                <EasingDoubleKeyFrame Value="0.5" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="0.5"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY">
-                                <EasingDoubleKeyFrame Value="0.5" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="0.5"/>
                             </DoubleAnimationUsingKeyFrames>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="RenderTransform.Children[1].Angle">
-                                <EasingDoubleKeyFrame Value="-50" KeyTime="0:0:0.4"/>
+                            <DoubleAnimationUsingKeyFrames
+                                    Storyboard.TargetProperty="RenderTransform.Children[1].Angle">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0.75" KeySpline="0.4,1,0.1,1" Value="-50"/>
                             </DoubleAnimationUsingKeyFrames>
                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
                                 <DiscreteObjectKeyFrame KeyTime="0:0:0.4" Value="{x:Static Visibility.Collapsed}"/>
@@ -75,7 +81,7 @@
         <Setter Property="Template">
             <Setter.Value>
 
-                <ControlTemplate TargetType="{x:Type Controls:RadialMenu}">
+                <ControlTemplate TargetType="Controls:RadialMenu">
                     <Grid>
 
                         <!-- RadialMenu background -->
@@ -85,7 +91,7 @@
                         <ItemsControl ItemsSource="{TemplateBinding Content}">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <Grid></Grid>
+                                    <Grid/>
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
