--- a/RadialMenu/Themes/RadialMenuCentralItem.xaml
+++ b/RadialMenu/Themes/RadialMenuCentralItem.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:RadialMenu.Controls">
 
-    <Style TargetType="{x:Type Controls:RadialMenuCentralItem}">
+    <Style TargetType="Controls:RadialMenuCentralItem">
 
         <Style.Triggers>
 
@@ -24,7 +24,7 @@
                 <Setter Property="BorderBrush" Value="#F3F3F3"/>
                 <Setter Property="Foreground" Value="#AFAFAF"/>
             </Trigger>
-            
+
         </Style.Triggers>
 
         <!-- Default RadialMenuCentralItem style -->
@@ -36,33 +36,33 @@
         <Setter Property="Foreground" Value="#111"/>
         <Setter Property="BorderBrush" Value="#CCC"/>
         <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="Panel.ZIndex" Value="0" />
+        <Setter Property="Panel.ZIndex" Value="0"/>
 
         <!-- RadialMenuCentralItem template -->
         <Setter Property="Template">
             <Setter.Value>
-                
-                <ControlTemplate TargetType="{x:Type Controls:RadialMenuCentralItem}">
+
+                <ControlTemplate TargetType="Controls:RadialMenuCentralItem">
                     <Grid>
-                        
+
                         <!-- Rounded button -->
                         <Ellipse
                             Stroke="{TemplateBinding BorderBrush}"
                             StrokeThickness="{Binding BorderThickness.Top, RelativeSource={RelativeSource AncestorType=Controls:RadialMenuCentralItem}}"
                             Fill="{TemplateBinding Background}"/>
-                        
+
                         <!-- Content -->
                         <ContentPresenter
                             Content="{TemplateBinding Content}"
                             HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
                             VerticalAlignment="{TemplateBinding VerticalAlignment}"/>
-                        
+
                     </Grid>
                 </ControlTemplate>
-                
+
             </Setter.Value>
         </Setter>
-        
+
     </Style>
-    
+
 </ResourceDictionary>
