--- a/RadialMenu/Themes/RadialMenuItem.xaml
+++ b/RadialMenu/Themes/RadialMenuItem.xaml
@@ -149,6 +149,7 @@
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToContentPosition}" ConverterParameter="X">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                    <Binding Path="HalfShifted" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="CenterX" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="CenterY" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Content.ActualWidth" RelativeSource="{RelativeSource TemplatedParent}" FallbackValue="0"/>
@@ -161,6 +162,7 @@
                                 <MultiBinding Converter="{StaticResource RadialMenuItemToContentPosition}" ConverterParameter="Y">
                                     <Binding Path="Index" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Count" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                    <Binding Path="HalfShifted" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="CenterX" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="CenterY" RelativeSource="{RelativeSource TemplatedParent}"/>
                                     <Binding Path="Content.ActualWidth" RelativeSource="{RelativeSource TemplatedParent}" FallbackValue="0"/>
